...
CGE6A
</string>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7DX-aJ-C7u" userLabel="aTextField">
                                                <rect key="frame" x="66.333333333333343" y="0.0" width="265" height="45.666666666666664"/>
                                                <accessibility key="accessibilityConfiguration" identifier="aTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                            </textField>
                                        </subviews>
...
CGI6A
</string>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="50X-qo-S0w" userLabel="bTextField">
                                                <rect key="frame" x="66.333333333333343" y="0.0" width="265" height="45.666666666666664"/>
                                                <accessibility key="accessibilityConfiguration" identifier="bTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                            </textField>
                                        </subviews>
...
CGM6A
</string>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vhe-d8-c6c" userLabel="cTextField">
                                                <rect key="frame" x="66.333333333333343" y="0.0" width="265" height="45.666666666666664"/>
                                                <accessibility key="accessibilityConfiguration" identifier="cTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                            </textField>
                                        </subviews>
...
CFJhw616IDE6A
</string>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pCl-Lj-AxU" userLabel="raiz1TextField">
                                                <rect key="frame" x="99.333333333333314" y="0.0" width="232" height="45.666666666666664"/>
                                                <accessibility key="accessibilityConfiguration" identifier="raiz1TextField">
                                                    <accessibilityTraits key="traits" notEnabled="YES"/>
                                                </accessibility>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
CFJhw616IDE6A
</string>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wbN-OD-0U7" userLabel="raiz2TextField">
                                                <rect key="frame" x="99.333333333333314" y="0.0" width="232" height="45.666666666666664"/>
                                                <accessibility key="accessibilityConfiguration" identifier="raiz2TextField">
                                                    <accessibilityTraits key="traits" notEnabled="YES"/>
                                                </accessibility>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8QH-N1-Ci6" userLabel="Row4">
                                        <rect key="frame" x="0.0" y="264.66666666666669" width="331.33333333333331" height="45.333333333333314"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GQM-cb-IbA" userLabel="Resolver">
                                                <rect key="frame" x="116.00000000000003" y="7" width="99.333333333333343" height="45.333333333333336"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Resolver"/>
                                                <state key="normal" title="Button"/>
                                                <connections>
                                                    <action selector="resolver:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6qW-dX-Ktr"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
